--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sanity-plugin-ui-improvements",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Plugin for Sanity which provides visual improvements to the interface",
   "keywords": [
     "sanity",
@@ -31,7 +31,10 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "i": "^0.3.7",
+    "npm": "^10.8.2",
     "rollup": "^4.21.1",
+    "rollup-plugin-import-css": "^3.5.1",
     "rollup-plugin-postcss": "^4.0.2"
   }
 }
